ECサイトのER図作成

--- a/product/Dockerfile
+++ b/product/Dockerfile
@@ -7,4 +7,4 @@ RUN cabal v2-update && cabal v2-install erd
 
 ENTRYPOINT ["erd"]
 
-# docker run -i erd < sample.er > out.pdf
+# docker run --rm -i erd < sample.er > out.pdf
